added protocol file from firmware. created messages for existing protocols. implemented methods in can_manager. Moved all messages/services to auvic_msgs.

--- a/trident/src/communication/monitor/CMakeLists.txt
+++ b/trident/src/communication/monitor/CMakeLists.txt
@@ -8,18 +8,7 @@ endif()
 
 find_package(catkin REQUIRED
   roscpp
-  can_msgs
-  message_generation
-)
-
-add_service_files(DIRECTORY srv
-  FILES
-  GetDeviceMessage.srv
-)
-
-generate_messages(
-  DEPENDENCIES
-  std_msgs
+  auvic_msgs
   can_msgs
 )
 
@@ -29,27 +18,27 @@ catkin_package(
    LIBRARIES
       can_manager
    CATKIN_DEPENDS
-      message_runtime
-      can_msgs
-      std_msgs
       roscpp
+      auvic_msgs
+      can_msgs
 )
 
 include_directories(
    include
+   ${auvic_msgs_INCLUDE_DIRS}
    ${catkin_INCLUDE_DIRS}
 )
 
 
 # can_manager
 add_library(can_manager src/can_manager.cpp)
-target_link_libraries(can_manager ${catkin_LIBRARIES})
 add_dependencies(can_manager ${catkin_EXPORTED_TARGETS})
+target_link_libraries(can_manager ${catkin_LIBRARIES})
 
 # can_manager_node
 add_executable(can_manager_node src/can_manager_node.cpp include/can_manager.hpp)
+add_dependencies(can_manager_node ${catkin_EXPORTED_TARGETS})
 target_link_libraries(can_manager_node can_manager ${catkin_LIBRARIES})
-add_dependencies(can_manager_node ${PROJECT_NAME}_generate_messages_cpp ${catkin_EXPORTED_TARGETS})
 
 install(
   TARGETS
