--- a/trident/src/communication/monitor/package.xml
+++ b/trident/src/communication/monitor/package.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>monitor</name>
-  <version>0.2.0</version>
+  <version>0.1.0</version>
   <description>The System Monitor package</description>
   <maintainer email="anijjar@uvic.ca">anijjar</maintainer>
   <license>MIT</license>
 
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>std_msgs</build_depend>
-  <build_depend>can_msgs</build_depend>
   <build_depend>roscpp</build_depend>
-  <build_depend>message_generation</build_depend>
-  <run_depend>message_runtime</run_depend>
-  <run_depend>roscpp</run_depend>
-  <run_depend>std_msgs</run_depend>
-  <run_depend>can_msgs</run_depend>
+  <build_depend>auvic_msgs</build_depend>
+  <build_depend>can_msgs</build_depend>
+  <exec_depend>can_msgs</exec_depend>
+  <exec_depend>auvic_msgs</exec_depend>
+  <exec_depend>roscpp</exec_depend>
+
 </package>
