--- a/trident/src/devices/package.xml
+++ b/trident/src/devices/package.xml
@@ -6,20 +6,12 @@
   <maintainer email="anijjar@todo.todo">anijjar</maintainer>
   <license>MIT</license>
 
-
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>message_generation</build_depend>
-  <build_depend>can_msgs</build_depend>
   <build_depend>roscpp</build_depend>
-  <build_depend>std_msgs</build_depend>
-  <build_depend>geometry_msgs</build_depend>
-  <build_export_depend>can_msgs</build_export_depend>
-  <build_export_depend>roscpp</build_export_depend>
-  <build_export_depend>std_msgs</build_export_depend>
-  <build_export_depend>geometry_msgs</build_export_depend>
+  <build_depend>auvic_msgs</build_depend>
+  <build_depend>can_msgs</build_depend>
   <exec_depend>can_msgs</exec_depend>
+  <exec_depend>auvic_msgs</exec_depend>
   <exec_depend>roscpp</exec_depend>
-  <exec_depend>message_runtime</exec_depend>
-  <exec_depend>std_msgs</exec_depend>
-  <exec_depend>geometry_msgs</exec_depend>   
+  
 </package>
