--- a/trident/.travis.yaml
+++ b/trident/.travis.yaml
@@ -1,6 +1,8 @@
 sudo: required 
 dist: focal 
-language: generic 
+language: generic
+services:
+  - docker
 compiler:
   - gcc
 notifications:
@@ -10,9 +12,13 @@ notifications:
       - auvic@uvic.ca  # Change this to yours should you copy this file.
 env:
   matrix:
-    - USE_DEB=true  ROS_DISTRO="noetic" ROS_REPOSITORY_PATH=http://packages.ros.org/ros/ubuntu
-    - USE_DEB=true  ROS_DISTRO="noetic" ROS_REPOSITORY_PATH=http://packages.ros.org/ros-shadow-fixed/ubuntu
+    - ROS_DISTRO="noetic" ROS_REPO=ros DOCKER_BASE_IMAGE=ros:noetic-ros-core
+    - ROS_DISTRO="noetic" ROS_REPO=ros-shadow-fixed DOCKER_BASE_IMAGE=ros:noetic-ros-core
+    - ROS_DISTRO="noetic" PRERELEASE=true
+matrix:
+  allow_failures:
+    - env: ROS_DISTRO="noetic" PRERELEASE=true
 install:
   - git clone https://github.com/ros-industrial/industrial_ci.git .ci_config  
 script: 
-  - source .ci_config/travis.sh
+  - source .auvic_ci/travis.sh
