changed runs- line

--- a/.github/workflows/trident-ci-workflow.yaml
+++ b/.github/workflows/trident-ci-workflow.yaml
@@ -16,7 +16,7 @@ on:
 jobs:
   build:
     #latest=18.04 (20.04 is not available yet)
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-16.04
     - uses: actions/checkout@v2
     steps:
       - name: Setup ros and can-utils
