--- a/.github/workflows/trident-ci-workflow.yaml
+++ b/.github/workflows/trident-ci-workflow.yaml
@@ -14,23 +14,26 @@ on:
       # add branches below
 
 jobs:
-  build:
-    #latest=18.04 (20.04 is not available yet)
+  job-setup:
+    name: setup
+    # latest=18.04 (20.04 is not available yet)
     runs-on: ubuntu-latest
+    shell: bash
     steps:
     - uses: actions/checkout@v2
-    # TODO: use actions instead of this setup.
-
     - name: Setup ros and can-utils
+      env:
+        # place enviroment variables here
+      id: setup
       run: |
         echo 'getting ros setup...'
         sudo sh -c 'echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list'
         sudo apt-key adv --keyserver 'hkp://keyserver.ubuntu.com:80' --recv-key C1CF6E31E6BADE8868B172B4F42ED6FBAB17C654
         sudo apt update
         source /opt/ros/noetic/setup.bash
+    - name: print execution time
+      run: echo 'The time to setup ros and socketCAN was ${{steps.setup.outputs.time}}.'
 
-    - name: build catkin_workspace 
-      run: |
 
 
     # - uses: actions/checkout@v2
