changed runs- line

--- a/.github/workflows/trident-ci-workflow.yaml
+++ b/.github/workflows/trident-ci-workflow.yaml
@@ -14,8 +14,9 @@ on:
       # add branches below
 
 defaults:
-  shell: bash
-  working-directory: trident
+  run:
+    shell: bash
+    working-directory: trident
 
 
 jobs:
