--- a/.github/workflows/trident-ci-workflow.yaml
+++ b/.github/workflows/trident-ci-workflow.yaml
@@ -41,8 +41,8 @@ jobs:
         echo 'getting ros setup...'
         sudo sh -c 'echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list'
         sudo apt-key adv --keyserver 'hkp://keyserver.ubuntu.com:80' --recv-key C1CF6E31E6BADE8868B172B4F42ED6FBAB17C654
-        sudo apt update
-        sudo apt install ros-${ROS_DISTRO}-ros-base
+        sudo apt-get update
+        sudo apt-get install ros-${ROS_DISTRO}-ros-base
         source /opt/ros/$ROS_DISTRO/setup.bash
     
     # action 2 - print the execution time.
