ros and can-utils are installed. resolving roslint errors

--- a/trident/src/communication/socketcan_bridge/CMakeLists.txt
+++ b/trident/src/communication/socketcan_bridge/CMakeLists.txt
@@ -106,7 +106,9 @@ install(
 
 if(CATKIN_ENABLE_TESTING)
   find_package(rostest REQUIRED)
-  find_package(roslint REQUIRED)
+  find_package(roslint REQUIRED
+    CMAKE_MODULE_PATH
+    Findroslint.cmake)
 
   roslint_cpp()
   roslint_add_test()
