resolved roslint errors. next make some c++ tests for can_manager and try running them here

--- a/.github/workflows/trident-ci-workflow.yaml
+++ b/.github/workflows/trident-ci-workflow.yaml
@@ -67,6 +67,6 @@ jobs:
       run: |
         source /opt/ros/${ROS_DISTRO}/setup.bash
         rosdep install --from-paths src --ignore-src -r -y
-        catkin_make
+        catkin_make -DDRIVE=virtual
       id: build
     
