Attempt to fix build action.
-Victor

--- a/.github/workflows/trident-ci-workflow@v2.yaml
+++ b/.github/workflows/trident-ci-workflow@v2.yaml
@@ -34,7 +34,7 @@ jobs:
   job1:
     # job name
     name: Install tools and build Trident
-    # latest=18.04 (20.04 is not available yet)
+    latest=18.04 (20.04 is not available yet)
     runs-on: ubuntu-latest
 
     # actions to execute in job1
